--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,13 @@
 version: "3.8"
 services:
+  dummy-backend:
+    image: allanktoradex/booking-rooms-server:latest
+    ports:
+      - "3000:3000"
+    restart: unless-stopped
+
   room-booking:
-    image: allanktoradex/booked_rooms_dashboard:latest
+    image: allanktoradex/booking-rooms-dashboard:latest
     ports:
       - "5173:5173"
     restart: unless-stopped
